# cica

./: .gitmodules  Cargo.toml  LICENSE  about.toml
src/: color_space.rs  image_processing.rs  kmeans.rs  lib.rs  main.rs  message.rs  model.rs  test_mod.rs  ui.rs
src/common/: file_io.rs  mod.rs
src/message/: file_io.rs  message.rs  mod.rs
src/model/: model.rs
src/test_mod/: nice_test.rs
src/update/: update.rs
src/view/: image_list.rs  main_area.rs  mod.rs  root_view.rs  thumbnail.rs
