[package]
name = "cica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.0", features = ["tokio", "canvas", "image", "advanced"] }
iced_aw = "0.12.2"
image = "0.25.6"
imageproc = "0.25.0"
rayon = "1.10.0"
rfd = "0.15.3"
tokio = { version = "1.44.2", features = ["sync"] }
wgpu = "25.0.0"
