[package]
name = "cica"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
csv = "1.3"
iced = "0.13.1"
image = "0.25.9"
lcms2 = "6.1.1"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
